@@ -449,7 +449,7 @@ public class InformationSchemaTest extends SQLTransportIntegrationTest {
     @Test
     public void testDefaultColumns() throws Exception {
         execute("select * from information_schema.columns order by table_schema, table_name");
-        assertEquals(387, response.rowCount());
+        assertEquals(389, response.rowCount());
     }
 
     @Test
