@@ -73,7 +73,7 @@ public class TableStatsServiceTest extends CrateUnitTest {
 
         // Initially disabled
         TableStatsService statsService = new TableStatsService(
-            Settings.builder().put(CrateSettings.STATS_SERVICE_REFRESH_INTERVAL.settingName(), 0).build(),
+            Settings.builder().put(CrateSettings.STATS_SERVICE_INTERVAL.settingName(), 0).build(),
             threadPool,
             clusterService,
             new TableStats(),
@@ -94,12 +94,12 @@ public class TableStatsServiceTest extends CrateUnitTest {
             mock(SQLOperations.class, Answers.RETURNS_MOCKS.get()));
 
         assertThat(statsService.lastRefreshInterval,
-            is(CrateSettings.STATS_SERVICE_REFRESH_INTERVAL.defaultValue()));
+            is(CrateSettings.STATS_SERVICE_INTERVAL.defaultValue()));
         assertThat(statsService.refreshScheduledTask, is(notNullValue()));
 
         // Update setting
         statsService.onRefreshSettings(Settings.builder()
-            .put(CrateSettings.STATS_SERVICE_REFRESH_INTERVAL.settingName(), "10m").build());
+            .put(CrateSettings.STATS_SERVICE_INTERVAL.settingName(), "10m").build());
 
         assertThat(statsService.lastRefreshInterval, is(TimeValue.timeValueMinutes(10)));
         assertThat(statsService.refreshScheduledTask,
@@ -107,7 +107,7 @@ public class TableStatsServiceTest extends CrateUnitTest {
 
         // Disable
         statsService.onRefreshSettings(Settings.builder()
-            .put(CrateSettings.STATS_SERVICE_REFRESH_INTERVAL.settingName(), 0).build());
+            .put(CrateSettings.STATS_SERVICE_INTERVAL.settingName(), 0).build());
 
         assertThat(statsService.lastRefreshInterval, is(TimeValue.timeValueMillis(0)));
         assertThat(statsService.refreshScheduledTask,
@@ -117,7 +117,7 @@ public class TableStatsServiceTest extends CrateUnitTest {
         statsService.onRefreshSettings(Settings.builder().build());
 
         assertThat(statsService.lastRefreshInterval,
-            is(CrateSettings.STATS_SERVICE_REFRESH_INTERVAL.defaultValue()));
+            is(CrateSettings.STATS_SERVICE_INTERVAL.defaultValue()));
         assertThat(statsService.refreshScheduledTask, is(notNullValue()));
     }
 
